Minor edits to style and text content

--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
     }
 
     body {
-      font-family: 'Quicksand', sans-serif;
-      
+      font-family: 'Quicksand', sans-serif;      
       background-size: cover;
       color: white;
       backdrop-filter: blur(8px);
@@ -30,7 +29,7 @@
     }
 
     header {
-      height: 50px;
+      padding: 1rem;
       background: rgb(35, 35, 47);
       display: flex;
       align-items: center;
@@ -121,7 +120,7 @@
         <div class="project-card">
           <img src="linkedin.png" alt="LinkedIn" class="project-image" />
           <div class="project-title">LinkedIn</div>
-          <div class="project-description">Learn about me.</div>
+          <div class="project-description">Get to know me.</div>
           <div class="tags">
             <div class="tag">Experiences</div>
             <div class="tag">Networking</div>
@@ -133,7 +132,7 @@
         <div class="project-card">
           <img src="week-vibes.jpg" alt="Week Vibes" class="project-image" />
           <div class="project-title">Week Vibes</div>
-          <div class="project-description">Do good for you.</div>
+          <div class="project-description">Do good for you, everyday.</div>
           <div class="tags">
             <div class="tag">React</div>
             <div class="tag">Vercel</div>
@@ -146,7 +145,7 @@
         <div class="project-card">
           <img src="meditation.jpg" alt="Meditation timers" class="project-image" />
           <div class="project-title">Meditation timers</div>
-          <div class="project-description">Simple tools for meditation.</div>
+          <div class="project-description">Calm your default mode network.</div>
           <div class="tags">
             <div class="tag">Vibe</div>
             <div class="tag">Coded</div>
