--- a/index.html
+++ b/index.html
@@ -50,13 +50,16 @@
       background: rgb(19, 19, 28);
       background: url('dogs.png') repeat;
       backdrop-filter: blur(4px);
+      display: flex;
+      justify-content: center;
     }
 
     .grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(280px, 280px));
       gap: 2rem;
-      
+      max-width: 1000px;
+      width: 100%;
     }
 
     .project-card {
