Add sticky header

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       font-size: 1.2rem;
       font-weight: 600;
       text-shadow: 0 0 8px rgba(0, 0, 0, 0.7);
-      position: fixed;
+      position: sticky;
       top: 0;
       width: 100%;
       z-index: 3;
@@ -55,7 +55,7 @@
       background: url('images/dogs-bw.jpg') repeat;
       display: flex;
       justify-content: center;
-      margin-top: 3rem;
+      
     }
 
     .grid {
@@ -129,7 +129,7 @@
 <body>
 
   <header>
-    <a href="#">Rendely</a>
+    <a href="https://rendely.com/">Rendely</a>
   </header>
 
   <main>
