Add poker simulator

--- a/index.html
+++ b/index.html
@@ -186,6 +186,19 @@
         </div>
       </a>
 
+       <a href="https://github.com/rendely/poker" target="_blank">
+        <div class="project-card">
+          <img src="images/poker.jpg" alt="Poker Github Repo" class="project-image" />
+          <div class="project-title">Poker Equity Simulator</div>
+          <div class="project-description">Learn poker hand equities.</div>
+          <div class="tags">
+            <div class="tag">Vibe</div>
+            <div class="tag">Coded</div>
+            <div class="tag">CLI</div>
+          </div>
+        </div>
+      </a>
+
 
     </div>
   </main>
