Add first post tile to homepage

--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
           <div class="tags">
             <div class="tag">Experiences</div>
             <div class="tag">Networking</div>
+            <div class="tag">Posts</div>
           </div>
         </div>
       </a>
@@ -195,6 +196,20 @@
             <div class="tag">Vibe</div>
             <div class="tag">Coded</div>
             <div class="tag">CLI</div>
+          </div>
+        </div>
+      </a>
+
+      <a href="https://www.rendely.com/posts/0-genai-pm-intro.html" target="_blank">
+        <div class="project-card">
+          <img src="images/ai-teacher.jpeg" alt="Poker Github Repo" class="project-image" />
+          <div class="project-title">How to Build Generative AI Products</div>
+          <div class="project-description">Intro for Product Managers</div>
+          <div class="tags">
+            <div class="tag">GenAI</div>
+            <div class="tag">PM</div>
+            <div class="tag">Learning</div>
+            <div class="tag">Posts</div>
           </div>
         </div>
       </a>
