Add eval post to main page

--- a/index.html
+++ b/index.html
@@ -214,6 +214,20 @@
         </div>
       </a>
 
+       <a href="https://www.rendely.com/posts/1-evals-pm-intro.html" target="_blank">
+        <div class="project-card">
+          <img src="images/eval.jpg" alt="Poker Github Repo" class="project-image" />
+          <div class="project-title">Evaluating GenAI Products</div>
+          <div class="project-description">Intro for Product Managers</div>
+          <div class="tags">
+            <div class="tag">GenAI</div>
+            <div class="tag">PM</div>
+            <div class="tag">Learning</div>
+            <div class="tag">Posts</div>
+          </div>
+        </div>
+      </a>
+
 
     </div>
   </main>
