Add gemini card

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Rendely</title>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Quicksand:wght@600&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Quicksand:wght@600&display=swap"
     rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="images/favicon.jpg">
   <style>
@@ -259,9 +258,6 @@
         align-items: flex-start;
       }
     }
-
-    
-
   </style>
 </head>
 
@@ -278,7 +274,7 @@
     <section class="hero">
       <p class="hero-eyebrow">Product &amp; GenAI</p>
       <h1 class="hero-title">Matthew Rendely</h1>
-      
+
     </section>
 
     <section class="projects">
@@ -287,14 +283,44 @@
       </div>
 
       <div class="project-grid">
-        <a class="project-card" href="https://linkedin.com/in/matthewrendely" target="_blank" rel="noreferrer">
-          <img src="images/linkedin.jpg" alt="LinkedIn" class="project-image" />
+        <a class="project-card" href="https://www.youtube.com/watch?v=khX5-VHoYds" target="_blank" rel="noreferrer">
+          <img src="images/gic.jpg" alt="Gemini in Chrome agentic capabilities talk" class="project-image" />
           <div class="project-content">
-            <div class="project-title">LinkedIn</div>
-            <div class="project-description">Experience highlights, product experiments, and current writing collected in one place.</div>
+            <div class="project-title">Gemini in Chrome Agentic Capabilities</div>
+            <div class="project-description">How we're weaving Gemini into Chrome to unlock richer, agentic workflows
+              across the browser.</div>
             <div class="tags">
-              <div class="tag">Experiences</div>
-              <div class="tag">Networking</div>
+              <div class="tag">YouTube</div>
+              <div class="tag">Gemini</div>
+              <div class="tag">Chrome</div>
+            </div>
+          </div>
+        </a>
+        <a class="project-card" href="https://www.rendely.com/posts/0-genai-pm-intro.html" target="_blank"
+          rel="noreferrer">
+          <img src="images/ai-teacher.jpeg" alt="How to Build Generative AI Products" class="project-image" />
+          <div class="project-content">
+            <div class="project-title">How to Build Generative AI Products</div>
+            <div class="project-description">Product manager-friendly foundations for building with GenAI.</div>
+            <div class="tags">
+              <div class="tag">GenAI</div>
+              <div class="tag">PM</div>
+              <div class="tag">Learning</div>
+              <div class="tag">Posts</div>
+            </div>
+          </div>
+        </a>
+
+        <a class="project-card" href="https://www.rendely.com/posts/1-evals-pm-intro.html" target="_blank"
+          rel="noreferrer">
+          <img src="images/eval.jpg" alt="Evaluating GenAI Products" class="project-image" />
+          <div class="project-content">
+            <div class="project-title">Evaluating GenAI Products</div>
+            <div class="project-description">A practical lens for measuring and iterating on GenAI experiences.</div>
+            <div class="tags">
+              <div class="tag">GenAI</div>
+              <div class="tag">PM</div>
+              <div class="tag">Learning</div>
               <div class="tag">Posts</div>
             </div>
           </div>
@@ -326,11 +352,13 @@
           </div>
         </a>
 
-        <a class="project-card" href="https://open.spotify.com/show/2fPaYIMGV3P20sBKonSSzv" target="_blank" rel="noreferrer">
+        <a class="project-card" href="https://open.spotify.com/show/2fPaYIMGV3P20sBKonSSzv" target="_blank"
+          rel="noreferrer">
           <img src="images/podcast.jpg" alt="Certainly uncertain podcast" class="project-image" />
           <div class="project-content">
             <div class="project-title">Certainly Uncertain</div>
-            <div class="project-description">A podcast exploring philosophy, product, and the humor tucked into ambiguity.</div>
+            <div class="project-description">A podcast exploring philosophy, product, and the humor tucked into
+              ambiguity.</div>
             <div class="tags">
               <div class="tag">Podcast</div>
               <div class="tag">Philosophy</div>
@@ -352,33 +380,21 @@
           </div>
         </a>
 
-        <a class="project-card" href="https://www.rendely.com/posts/0-genai-pm-intro.html" target="_blank" rel="noreferrer">
-          <img src="images/ai-teacher.jpeg" alt="How to Build Generative AI Products" class="project-image" />
+
+        <a class="project-card" href="https://linkedin.com/in/matthewrendely" target="_blank" rel="noreferrer">
+          <img src="images/linkedin.jpg" alt="LinkedIn" class="project-image" />
           <div class="project-content">
-            <div class="project-title">How to Build Generative AI Products</div>
-            <div class="project-description">Product manager-friendly foundations for building with GenAI.</div>
+            <div class="project-title">LinkedIn</div>
+            <div class="project-description">Experience highlights, product experiments, and current writing collected
+              in one place.</div>
             <div class="tags">
-              <div class="tag">GenAI</div>
-              <div class="tag">PM</div>
-              <div class="tag">Learning</div>
+              <div class="tag">Experiences</div>
+              <div class="tag">Networking</div>
               <div class="tag">Posts</div>
             </div>
           </div>
         </a>
 
-        <a class="project-card" href="https://www.rendely.com/posts/1-evals-pm-intro.html" target="_blank" rel="noreferrer">
-          <img src="images/eval.jpg" alt="Evaluating GenAI Products" class="project-image" />
-          <div class="project-content">
-            <div class="project-title">Evaluating GenAI Products</div>
-            <div class="project-description">A practical lens for measuring and iterating on GenAI experiences.</div>
-            <div class="tags">
-              <div class="tag">GenAI</div>
-              <div class="tag">PM</div>
-              <div class="tag">Learning</div>
-              <div class="tag">Posts</div>
-            </div>
-          </div>
-        </a>
       </div>
     </section>
   </main>
