Revert old desecriptions

--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
           <img src="images/week-vibes.jpeg" alt="Week Vibes" class="project-image" />
           <div class="project-content">
             <div class="project-title">Week Vibes</div>
-            <div class="project-description">Micro-actions that turn habit-building into a light, daily ritual.</div>
+            <div class="project-description">Do good for you, everyday.</div>
             <div class="tags">
               <div class="tag">React</div>
               <div class="tag">Vercel</div>
@@ -343,7 +343,7 @@
           <img src="images/meditation.jpg" alt="Meditation timers" class="project-image" />
           <div class="project-content">
             <div class="project-title">Meditation Timers</div>
-            <div class="project-description">Breath and reset timers for carving out quiet pockets in the week.</div>
+            <div class="project-description">Calm your default mode network.</div>
             <div class="tags">
               <div class="tag">Vibe</div>
               <div class="tag">Coded</div>
@@ -357,8 +357,7 @@
           <img src="images/podcast.jpg" alt="Certainly uncertain podcast" class="project-image" />
           <div class="project-content">
             <div class="project-title">Certainly Uncertain</div>
-            <div class="project-description">A podcast exploring philosophy, product, and the humor tucked into
-              ambiguity.</div>
+            <div class="project-description">Philosophize with me.</div>
             <div class="tags">
               <div class="tag">Podcast</div>
               <div class="tag">Philosophy</div>
@@ -371,7 +370,7 @@
           <img src="images/poker.jpg" alt="Poker GitHub repo" class="project-image" />
           <div class="project-content">
             <div class="project-title">Poker Equity Simulator</div>
-            <div class="project-description">A CLI trainer that makes the math behind poker equity second nature.</div>
+            <div class="project-description">Learn poker hand equities.</div>
             <div class="tags">
               <div class="tag">Vibe</div>
               <div class="tag">Coded</div>
@@ -385,8 +384,7 @@
           <img src="images/linkedin.jpg" alt="LinkedIn" class="project-image" />
           <div class="project-content">
             <div class="project-title">LinkedIn</div>
-            <div class="project-description">Experience highlights, product experiments, and current writing collected
-              in one place.</div>
+            <div class="project-description">Get to know me.</div>
             <div class="tags">
               <div class="tag">Experiences</div>
               <div class="tag">Networking</div>
