--- a/index.html
+++ b/index.html
@@ -324,6 +324,19 @@
               <div class="tag">Posts</div>
             </div>
           </div>
+        </a>      
+
+        <a class="project-card" href="https://ai.studio/apps/drive/1GW4Jr7jC2q7R2wIDaSZur4Kv9RWSbQZh" target="_blank" rel="noreferrer">
+          <img src="images/dnd-cover.jpg" alt="DND Cover" class="project-image" />
+          <div class="project-content">
+            <div class="project-title">Dungeons and Dragons Scene Generator</div>
+            <div class="project-description">Create characters and generate scenes from your story with high consistency.</div>
+            <div class="tags">
+              <div class="tag">Nano Banana</div>
+              <div class="tag">AI Studio</div>
+              <div class="tag">D&D</div>
+            </div>
+          </div>
         </a>
 
         <a class="project-card" href="https://week-vibes.vercel.app" target="_blank" rel="noreferrer">
