Add json parser link

--- a/index.html
+++ b/index.html
@@ -406,6 +406,19 @@
           </div>
         </a>
 
+        <a class="project-card" href="https://rendely.github.io/phase-1-project-json-parser/src/" target="_blank" rel="noreferrer">
+          <!-- <img src="images/linkedin.jpg" alt="JSON Parser" class="project-image" /> -->
+          <div class="project-content">
+            <div class="project-title">JSON Parser</div>
+            <div class="project-description">Understand your data.</div>
+            <div class="tags">
+              <div class="tag">JSON</div>
+            </div>
+          </div>
+        </a>
+
+       
+
       </div>
     </section>
   </main>
